Fix footer not staying on bottom on mobile edge

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 header {
 	width: 100%;
 	max-width: 2560px;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	background-color: var(--white-opa);
 	z-index: 1;
@@ -181,7 +181,7 @@ footer {
 	font-size: 0.875rem;
 	width: 100%;
 	max-width: 2560px;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	background-color: var(--white-opa);
 	touch-action: none;
